Bug/246968 comment box text glitch (#600)
* Fix overspill

* fix without regression

* fix typo

* Update change log

* fix for task list notes

* update note and task note test to use id

---------

--- a/src/Frontend/Dfe.Complete/wwwroot/src/index.scss
+++ b/src/Frontend/Dfe.Complete/wwwroot/src/index.scss
@@ -179,3 +179,8 @@ p.govuk-phase-banner__content {
 a.dfe-header__link--service, a.dfe-header__navigation-link {
 	color: #ffffff;
 }
+
+//Stop the projects notes text from overflowing off screen
+.notes-body{
+	white-space: pre-line;
+}
